--- a/index.html
+++ b/index.html
@@ -5,18 +5,22 @@
   <title>huginn</title>
   <link rel="stylesheet" href="style.css" />
 </head>
+
 <body>
 
-<nav>
-  <a href="/">Home</a>
-  <a href="/Research-Output/">Research Output</a>
-  <a href="/MSc-Application/">MSc Application Materials</a>
-</nav>
+<div class="layout">
+  <nav>
+    <a href="/">Home</a>
+    <a href="/Research-Output/">Research Output</a>
+    <a href="/MSc-Application/">MSc Application Materials</a>
+  </nav>
 
-<main>
-  <h1>huginn</h1>
-  <p>Research & MSc Application Materials</p>
-</main>
+  <main>
+    <h1>huginn</h1>
+    <p>Research & MSc Application Materials</p>
+  </main>
+</div>
 
 </body>
+
 </html>
