--- a/Research-Output/index.html
+++ b/Research-Output/index.html
@@ -5,18 +5,21 @@
   <title>Research Output</title>
   <link rel="stylesheet" href="../style.css" />
 </head>
+  
 <body>
+<div class="layout">
+  <nav>
+    <a href="/">Home</a>
+    <a href="/Research-Output/">Research Output</a>
+    <a href="/MSc-Application/">MSc Application Materials</a>
+  </nav>
 
-<nav>
-  <a href="/">Home</a>
-  <a href="/Research-Output/">Research Output</a>
-  <a href="/MSc-Application/">MSc Application Materials</a>
-</nav>
-
-<main>
-  <h1>Research Output</h1>
-  <p>Papers, posters, ongoing projects.</p>
-</main>
+  <main>
+    <h1>Research Output</h1>
+    <p>Papers, posters, ongoing projects.</p>
+  </main>
+</div>
 
 </body>
+
 </html>
