--- a/Research-Output/index.html
+++ b/Research-Output/index.html
@@ -17,19 +17,19 @@
   <main>
     <h1>Research Output</h1>
     <h2>Award</h2>
-    <h3>First prize of Research-Output/Awards/2025 The First China Undergraduate Innovation and Creativity Competition on Surface.Engineering</h3>
+    <h3>First prize of The First China Undergraduate Innovation and Creativity Competition on Surface.Engineering</h3>
     <ul>
     <li>Photo - First Prize
-    <a herf="Research-Output/Awards/2025 The First China Undergraduate Innovation and Creativity Competition on Surface.Engineering/a-奖状.jpg">JPG</a>
+    <a href="Research-Output/Awards/2025 The First China Undergraduate Innovation and Creativity Competition on Surface.Engineering/a-奖状.jpg">JPG</a>
     </li>
     <li>Photo - Participation 1
-    <a herf="Research-Output/Awards/2025 The First China Undergraduate Innovation and Creativity Competition on Surface.Engineering/c-拿着奖状.jpg">JPG</a>
+    <a href="Research-Output/Awards/2025 The First China Undergraduate Innovation and Creativity Competition on Surface.Engineering/c-拿着奖状.jpg">JPG</a>
     </li>
     <li>Photo - Participation 2
-    <a herf="Research-Output/Awards/2025 The First China Undergraduate Innovation and Creativity Competition on Surface.Engineering/c-参赛.jpg">JPG</a>
+    <a href="Research-Output/Awards/2025 The First China Undergraduate Innovation and Creativity Competition on Surface.Engineering/c-参赛.jpg">JPG</a>
     </li>
     <li>Slides - for Competition
-    <a herf="Research-Output/Awards/2025 The First China Undergraduate Innovation and Creativity Competition on Surface.Engineering/本科生12+蔡雨馨+汕头大学.pdf">PDF>PDF
+    <a href="Research-Output/Awards/2025 The First China Undergraduate Innovation and Creativity Competition on Surface.Engineering/本科生12+蔡雨馨+汕头大学.pdf">PDF</a>
     </li>
       
       
