--- a/Research-Output/index.html
+++ b/Research-Output/index.html
@@ -20,7 +20,7 @@
     <h3>First prize of The First China Undergraduate Innovation and Creativity Competition on Surface.Engineering</h3>
     <ul>
     <li>Photo - First Prize
-    <a href="Research-Output/Awards/2025 The First China Undergraduate Innovation and Creativity Competition on Surface.Engineering/a-奖状.jpg">JPG</a>
+    <a href="Awards/2025 The First China Undergraduate Innovation and Creativity Competition on Surface.Engineering/a-奖状.jpg">JPG</a>
     </li>
     <li>Photo - Participation 1
     <a href="Research-Output/Awards/2025 The First China Undergraduate Innovation and Creativity Competition on Surface.Engineering/c-拿着奖状.jpg">JPG</a>
