--- a/Research-Output/index.html
+++ b/Research-Output/index.html
@@ -39,10 +39,11 @@
         <a>photo</a></li>
         <li>
          Poster Design
-          <a hrefPoster/PCRAS-Conference.pdf">PDF</a>
+          <a href="Poster/PCRAS-Conference.pdf">PDF</a>
         </li>
        </ul>
-
+    <h2>Manuscripts</h2>
+<ul> <li>Influence of layer thickness </li></ul>
   
   </main>
 </div>
