--- a/Research-Output/index.html
+++ b/Research-Output/index.html
@@ -33,7 +33,9 @@
     </li>
     </ul>
       <h2>Conference</h2>
-      <h3>XXX </h3>
+      <h3> 2025 Annual Meeting of Guangdong Surface Analysis
+Professional Committee and the 9th Surfac e Analysis Technology Symposium. Zhonghshan, GuangDong, China, Dec, 5,
+2025. </h3>
       <ul>
         <li>Poster presentation
         <a>photo</a></li>
@@ -43,7 +45,9 @@
         </li>
        </ul>
     <h2>Manuscripts</h2>
-<ul> <li>Influence of layer thickness </li></ul>
+<ul> <li>Influence of layer thickness </li>
+<li>A Quantitative Model of GDOES Depth Profiles under Preferential Sputtering and Crater Effects</li>
+</ul>
   
   </main>
 </div>
