--- a/HR_MSc_Application_Materials/materials.html
+++ b/HR_MSc_Application_Materials/materials.html
@@ -16,7 +16,7 @@
   <main>
     <h1>High Resolution Application Materials</h1>
     <h2>Course Module</h2>
-    <a href="Module-F.pdf">PDF</a>
+    <a href="Module-">PDF</a>
     <h2>Document on Experiments</h2>
     <a href="Document-on-experiments.pdf">PDF</a>
 
