--- a/Research-Output/index.html
+++ b/Research-Output/index.html
@@ -11,7 +11,7 @@
   <nav>
     <a href="/">Home</a>
     <a href="/Research-Output/">Research Output</a>
-    <a href="/MSc-Application/">MSc Application Materials (High Resolution)</a>
+    <a href="/HR_MSc_Application_Materials/">MSc Application Materials (High Resolution)</a>
   </nav>
 
   <main>
