--- a/index.html
+++ b/index.html
@@ -12,12 +12,13 @@
   <nav>
     <a href="/">Home</a>
     <a href="/Research-Output/">Research Output</a>
-    <a href="/MSc-Application/">MSc Application Materials</a>
+    <a href="/HR_MSc_Application_Materials/"> MSc Application Materials (High Resolution)</a>
+     <a href="Solid-State-Physics-Game"> Crystal Minotaur (Solid-State Physics Game)</a>
   </nav>
 
   <main>
     <h1>huginn</h1>
-    <p>Research & MSc Application Materials</p>
+    <p>Research & MSc Application Materials & Game Project </p>
   </main>
 </div>
 
