--- a/Research-Output/index.html
+++ b/Research-Output/index.html
@@ -12,6 +12,7 @@
     <a href="/">Home</a>
     <a href="/Research-Output/">Research Output</a>
     <a href="/HR_MSc_Application_Materials/">MSc Application Materials (High Resolution)</a>
+    <a href="Solid-State-Physics-Game"> Crystal Minotaur (Solid-State Physics Game)</a>
   </nav>
 
   <main>
