--- a/HR_MSc_Application_Materials/materials.html
+++ b/HR_MSc_Application_Materials/materials.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <title>High Resolution Version of Msc Application Materials</title>
+  <title> High-Resolution MSc Application Materials</title>
   <link rel="stylesheet" href="../style.css" />
 </head>
   
@@ -11,14 +11,15 @@
   <nav>
     <a href="/">Home</a>
     <a href="/Research-Output/">Research Output</a>
+     <a href="/HR_MSc_Application_Materials/"> MSc Application Materials (High Resolution)</a>
+     <a href="/Solid-State-Physics-Game/"> Crystal Minotaur (Solid-State Physics Game)</a>
   </nav>
 
   <main>
-    <h1>High Resolution Application Materials</h1>
-    <h2>Course Module</h2>
-    <a href="Module-F.pdf">PDF</a>
-    <h2>Document on Experiments</h2>
-    <a href="Document-on-experiments.pdf">PDF</a>
+    <h1>Module catalogue</h1>
+    <a href="/Module-F.pdf/">PDF</a>
+    <h2>Document on experimental lab courses</h2>
+    <a href="/Document-on-experiments.pdf/">PDF</a>
 
   
   </main>
