--- a/Research-Output/res-output.html
+++ b/Research-Output/res-output.html
@@ -47,7 +47,8 @@ Professional Committee and the 9th Surfac e Analysis Technology Symposium. Zhong
        </ul>
     <h2>Manuscripts</h2>
 <ul> 
-<li>A Quantitative Model of GDOES Depth Profiles under Preferential Sputtering and Crater Effects</li>
+<li>A Quantitative Model of GDOES Depth Profiles under Preferential Sputtering and Crater Effects </li>
+  <li>Effect of film thickness on glow discharge spectrometry depth profile </li>
 </ul>
   
   </main>
