--- a/HR_MSc_Application_Materials/materials.html
+++ b/HR_MSc_Application_Materials/materials.html
@@ -10,8 +10,8 @@
 <div class="layout">
   <nav>
     <a href="/">Home</a>
-    <a href="/Research-Output/">Research Output</a>
-     <a href="/HR_MSc_Application_Materials/"> MSc Application Materials (High Resolution)</a>
+    <a href="/Research-Output/res-output.html">Research Output</a>
+    <a href="/HR_MSc_Application_Materials/materials.html"> MSc Application Materials (High Resolution)</a>
      <a href="/Solid-State-Physics-Game/"> Crystal Minotaur (Solid-State Physics Game)</a>
   </nav>
 
