--- a/Research-Output/res-output.html
+++ b/Research-Output/res-output.html
@@ -5,7 +5,10 @@
   <title>Research Output</title>
   <link rel="stylesheet" href="../style.css" />
 </head>
-  
+  <p style="color: red; font-size: 20px;">
+  DEBUG: updated on 2025-01-XX
+</p>
+
 <body>
 <div class="layout">
   <nav>
