--- a/HR_MSc_Application_Materials/materials.html
+++ b/HR_MSc_Application_Materials/materials.html
@@ -9,15 +9,16 @@
 <body>
 <div class="layout">
   <nav>
-    <a href="/">Home</a>
-    <a href="/Research-Output/">Research Output</a>
+ <a href="/">Home</a>
+    <a href="/Research-Output/res-output.html">Research Output</a>
+     <a href="/Solid-State-Physics-Game/"> Crystal Minotaur (Solid-State Physics Game)</a>
   </nav>
 
   <main>
     <h1>High Resolution Application Materials</h1>
     <h2>Course Module</h2>
-    <a href="Module-">PDF</a>
-    <h2>Document on Experiments</h2>
+    <a href="Module-F.pdf">PDF</a>
+    <h2>Document on experiments lab courses</h2>
     <a href="Document-on-experiments.pdf">PDF</a>
 
   
