--- a/HR_MSc_Application_Materials/materials.html
+++ b/HR_MSc_Application_Materials/materials.html
@@ -19,7 +19,7 @@
     <h2>Course Module</h2>
     <a href="Module-F.pdf">PDF</a>
     <h2>Document on experiments lab courses</h2>
-    <a href="Document-on-experiments.pdf">PDF</a>
+    <a href="Document-on-experiments.pdf.pdf">PDF</a>
 
   
   </main>
