--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <a href="/">Home</a>
     <a href="/Research-Output/res-output.html">Research Output</a>
     <a href="/HR_MSc_Application_Materials/materials.html"> MSc Application Materials (High Resolution) </a>
-     <a href="/Solid-State-Physics-Game/"> Crystal Minotaur (Solid-State Physics Game)</a>
+     <a href="/Solid-State-Physics-Game/game.html"> Crystal Minotaur (Solid-State Physics Game)</a>
   </nav>
 
   <main>
